# TalkingMuch

./: .gitignore  Procfile  README.md  admin.txt  db.sqlite3  dockerfile  manage.py  psycopg2_binary-2.9.9-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  pyproject.toml  readme.md  requirements.txt
TalkingMuch/: asgi.py  settings.py  urls.py  wsgi.py
main/: forms.py  lectorWhatsapp.py  models.py  urls.py  views.py
main/migrations/: 0001_initial.py
main/static/css/: options.css
main/static/js/: form.js  script_upload.js
main/templates/main/: base.html  forms.html  index.html  index_upload copy.html  results.html  upload.html
staticfiles/: staticfiles.json
staticfiles/css/: base.css  description.e3ded1207254.css  results.2a01f09f41dc.css  style_upload.0dde0f18c9e4.css
staticfiles/js/: charts.8230e46db652.js
