[tool.poetry]
name = "talkingmuch"
version = "0.1.0"
description = ""
authors = ["Mario Toribio <yuniormtr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django-heroku = "^0.3.1"
django = "^5.0.2"
gunicorn = "20.0.4"
django-crispy-forms = "^2.1"
python-decouple = "^3.8"
whitenoise = "^6.6.0"
psycopg2 = "^2.9.9"
dj-database-url = "^2.1.0"
django-bootstrap4 = "^24.1"
crispy-bootstrap4 = "^2023.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
